# table_ocr_dynamic

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: stock_table_schema.json
data/: stock_code_name_sample.csv
docs/: CODEX_OR_OPENCLAW_PROMPT.md  TECHNICAL_PLAN.md
docs/superpowers/plans/: 2026-05-29-web-app.md
docs/superpowers/specs/: 2026-05-29-web-app-design.md
src/stock_table_ocr/: cli.py  config.py  header_locator.py  image_utils.py  line_detector.py  models.py  normalizers.py  ocr_engine.py  outputs.py  parser.py  validators.py
tests/: test_line_detector.py  test_normalizers.py  test_paddle_parse.py
web/: app.py
web/static/: app.js  style.css
web/templates/: base.html  index.html
web/templates/tabs/: cells.html  errors.html  jsonl.html  layout.html  preview.html  stocks.html  table.html
